# picai_eval

./: .coveragerc  .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
src/picai_eval/: __init__.py  __main__.py  analysis_utils.py  data_utils.py  eval.py  image_utils.py  metrics.py  statistical_helper.py
tests/: Development-README.md  test-metrics.json  test_analysis_utils.py  test_calculate_counts.py  test_case_evaluation.py  test_evaluation.py  test_lesion_tpr_at_fpr.py  test_statistical_helper.py
tests/output-expected/: metrics-expected.json  metrics-full-expected.json  metrics-main-expected.json  metrics-minimal-expected.json
tests/test-maps/: overview.md
