[metadata]
name = picai_eval
description = PICAI Evaluation
author = Joeran Bosma, Anindo Saha and Matin Hosseinzadeh
license = Apache 2.0
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages =
    picai_eval
install_requires =
    numpy
    tqdm
    SimpleITK
    scipy
    scikit-learn>=0.20.3
    mlxtend
    report_guided_annotation>=0.2.4
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
picai_eval = py.typed

[flake8]
max-line-length = 160